--- a/imahe/package.json
+++ b/imahe/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.7.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swiper": "^11.2.8",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
